--- a/public/assets/restrito/css/style.css
+++ b/public/assets/restrito/css/style.css
@@ -69,7 +69,7 @@ body {
 }
 
 .primary-color {
-  color: #aa66cc !important;
+  color: #607d8b !important;
 }
 
 .success-color {
@@ -5911,8 +5911,20 @@ label.checkbox-inline .checkbox-material .check:before {
   margin-left: 6px;
   width: 0;
   height: 0;
-  -webkit-box-shadow: 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0 inset;
-  box-shadow: 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0 inset;
+  -webkit-box-shadow: 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0 inset;
+  box-shadow: 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0 inset;
 }
 
 .checkbox input[type=checkbox]:focus + .checkbox-material .check:after,
@@ -6111,8 +6123,20 @@ label.checkbox-inline input[type=checkbox][disabled] + .checkbox-material .check
     margin-left: -2px;
     width: 20px;
     height: 20px;
-    -webkit-box-shadow: 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0px 0 0 10px inset;
-    box-shadow: 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0px 0 0 10px inset;
+    -webkit-box-shadow: 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0px 0 0 10px inset;
+    box-shadow: 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0px 0 0 10px inset;
   }
   100% {
     -webkit-transform: rotate(0deg);
@@ -6121,8 +6145,20 @@ label.checkbox-inline input[type=checkbox][disabled] + .checkbox-material .check
     margin-left: -2px;
     width: 20px;
     height: 20px;
-    -webkit-box-shadow: 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0px 0 0 0 inset;
-    box-shadow: 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0px 0 0 0 inset;
+    -webkit-box-shadow: 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0px 0 0 0 inset;
+    box-shadow: 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0px 0 0 0 inset;
   }
 }
 
@@ -6152,8 +6188,20 @@ label.checkbox-inline input[type=checkbox][disabled] + .checkbox-material .check
     margin-left: -2px;
     width: 20px;
     height: 20px;
-    -webkit-box-shadow: 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0px 0 0 10px inset;
-    box-shadow: 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0px 0 0 10px inset;
+    -webkit-box-shadow: 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0px 0 0 10px inset;
+    box-shadow: 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0px 0 0 10px inset;
   }
   100% {
     -webkit-transform: rotate(0deg);
@@ -6162,8 +6210,20 @@ label.checkbox-inline input[type=checkbox][disabled] + .checkbox-material .check
     margin-left: -2px;
     width: 20px;
     height: 20px;
-    -webkit-box-shadow: 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0px 0 0 0 inset;
-    box-shadow: 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0px 0 0 0 inset;
+    -webkit-box-shadow: 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0px 0 0 0 inset;
+    box-shadow: 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0 0 0 0,
+ 0px 0 0 0 inset;
   }
 }
 
@@ -6645,7 +6705,7 @@ a.btn.btn-sm {
 }
 
 .btn-primary, .btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled:active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary:active:focus, .open > .dropdown-toggle.btn-primary:focus, .open > .dropdown-toggle.btn-primary, .open > .dropdown-toggle.btn-primary:hover {
-  background: #aa66cc;
+  background: #607d8b;
 }
 
 .btn-success, .btn-success.disabled, .btn-success.disabled:hover, .btn-success.disabled:focus, .btn-success.disabled:active, .btn-success[disabled], .btn-success[disabled]:hover, .btn-success[disabled]:focus, .btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success:active:focus, .open > .dropdown-toggle.btn-success:focus, .open > .dropdown-toggle.btn-success, .open > .dropdown-toggle.btn-success:hover {
